app/assets/stylesheets/modules/search-bar.scss
#search-navbar-container {
  background-color: $sul-navbar-brand-color;
  height: 100px;
  max-height: 100px;
  padding: 0;

  #search-navbar {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    height: inherit;
    max-height: inherit;
  }

  a {
    border: 0;
  }

  .search-navbar-headings {
    .navbar-brand {
      height: 28px;
      margin: 36px 10px 36px 0;
      padding: 0;

      img {
        height: 28px;
      }
    }

    .search-dropdown {
      display: inline-block;
      height: inherit;

      .dropdown-menu {
        left: auto;
        top: 70%;

        li.active {
          background-color: $public-note-yellow;
          color: $black; // override bootstrap
          padding: 3px 20px;
        }
      }
    }
  }

  // For text search pulldown
  .search-form {
    flex: auto;

    .input-group-addon {
      &.for-search-field {
        border-radius: 4px 0 0 4px;
      }
    }
  }

  .search-target {
    border-bottom: $white dashed 2px;
    color: $white;
    margin: 3px 0;
    padding: 0;

    h1 {
      color: $white;
      display: inline-block;
      margin: 30px 0 0;
      padding: 0;
    }
  }

  @media screen and (max-width: $screen-md-min) {
    .input-group-btn {
      width: 1%;
    }

    .navbar-form {
      border: 0;
      margin: 0 auto;
      max-height: 40px;
      padding: 0;
      width: 100%;
    }

    .navbar-header {
      float: none;
    }

    .search-form {
      display: block;
      margin: 10px auto;
      padding-left: 15px;
      padding-right: 15px;
      width: 100%;
    }

    .search_field {
      width: 82px;
    }

    .search-navbar-headings {
      margin-top: 5px;
      text-align: center;
      width: 100%;

      .search-dropdown {
        .dropdown-menu {
          left: 0;
          top: 45%;
          width: 100%;
          z-index: 10001;
        }
      }
    }

    .search-target {
      float: none;
      margin-top: 5px;
      vertical-align: baseline;

      h1 {
        margin-top: 0;
      }
    }

    #searchworks-logo {
      float: none;

      img {
        display: inline-block;
        vertical-align: baseline;
      }
    }
  }

  @media screen and (min-width: $screen-md-min) {
    .navbar-form {
      margin: 0 auto;
    }
  }
}

